--- a/my-app/src/app/ferry.terminal/ferry.terminal.component.html
+++ b/my-app/src/app/ferry.terminal/ferry.terminal.component.html
@@ -6,24 +6,49 @@
     is your OWN IMAGINATION!
     <br />
 
-    <h1>{{ 'Ferry Small Available: ' + newFerrySmall}}</h1>
-    <h1>{{ 'Ferry Large Available: ' + newFerryLarge}}</h1>
+    <div class="container-left">
+        <h1>{{ 'Car: ' + newFerrySmallCarPrice * 5}}</h1>
+        <h1>{{ 'Van: ' + newFerrySmallVanPrice * 7.5}}</h1>
+        <h1>{{ 'Truck: ' + newFerryLargeTruckPrice * 10 }}</h1>
+        <h1>{{ 'Bus: ' + newFerryLargeBusPrice * 15 }}</h1>
+    </div>
+    
+    <div>
+        <h1>{{ 'Ferry Small Available: ' + newFerrySmall}}</h1>
+        <h1>{{ 'Ferry Large Available: ' + newFerryLarge}}</h1>
+    </div>
 
-    <div>        
+    <div class="container-center" >        
         <ul>
-            <li *ngFor="let vehicle of newVehicleArrSmall">
+            <li *ngFor="let vehicle of newVehicleArrCarSmall">
                 <span *ngIf="vehicle.type==0">{{'Small vehitype type: ' + vehicle.type}}</span>
                 <span *ngIf="vehicle.type==1">{{'Small vehitype type: ' + vehicle.type}}</span>
             </li>
         </ul>
     </div>
-    <div>
-    <ul>
-        <li *ngFor="let vehicle of newVehicleArrLarge">
-            <span *ngIf="vehicle.type==2">{{'Large vehitype type: ' + vehicle.type}}</span>
-            <span *ngIf="vehicle.type==3">{{'Large vehitype type: ' + vehicle.type}}</span>
-        </li>
-    </ul>
+    <div class="container-center">        
+        <ul>
+            <li *ngFor="let vehicle of newVehicleArrVanSmall">
+                <span *ngIf="vehicle.type==0">{{'Small vehitype type: ' + vehicle.type}}</span>
+                <span *ngIf="vehicle.type==1">{{'Small vehitype type: ' + vehicle.type}}</span>
+            </li>
+        </ul>
+    </div>
+    <div class="container-center">
+        <ul>
+            <li *ngFor="let vehicle of newVehicleArrTruckLarge">
+                <span *ngIf="vehicle.type==2">{{'Large vehitype type: ' + vehicle.type}}</span>
+                <span *ngIf="vehicle.type==3">{{'Large vehitype type: ' + vehicle.type}}</span>
+            </li>
+        </ul>
+    </div>
+    <div class="container-center">
+        <ul>
+            <li *ngFor="let vehicle of newVehicleArrBusLarge">
+                <span *ngIf="vehicle.type==2">{{'Large vehitype type: ' + vehicle.type}}</span>
+                <span *ngIf="vehicle.type==3">{{'Large vehitype type: ' + vehicle.type}}</span>
+            </li>
+        </ul>
     </div>
   
     <button (click)="getVehicle()">Get Vehicle</button>
